lang/examples/bad/WrongNumberOfArguments.gt
fn f(x : int) -> int {
    return x;
}

fn main() -> int {
    f(1, 1);
    return 0;
}
